# mlops-zoomcamp

./: pyproject.toml
03-orchestration/: homework.py  model_training.py  orchestration.py  prefect_deploy.py  prefect_deploy_homework.py  prefect_flow.py  work-queue.py
homework/module_1/: module_1.ipynb
homework/module_2/: README.md  hpo.py  register_model.py  test_experiments.py  train.py
homework/module_2/artifacts/3/a8ad63097c1d443683a4c1c17ca747d6/artifacts/model/: MLmodel  conda.yaml
homework/module_2/artifacts/4/03ef38ae19bc4675baee797830f0ad2e/artifacts/model/: MLmodel
homework/module_2/artifacts/4/1bd7d469a2114c72b3fc23fe8a53aff2/artifacts/model/: MLmodel
homework/module_2/artifacts/4/1faf5298482d4a8390165b88840dde19/artifacts/model/: MLmodel
homework/module_2/artifacts/4/4046bc393eb24ccd8ce1d9185b174114/artifacts/model/: MLmodel
homework/module_2/artifacts/4/45023cfa29fa43f2979d6c3f490ccfb0/artifacts/model/: MLmodel
homework/module_2/artifacts/4/504bf3699fa6496c973e4d35d6155029/artifacts/model/: MLmodel
homework/module_2/artifacts/4/5cccfa400f21433ba05193b93bc360e0/artifacts/model/: MLmodel
homework/module_2/artifacts/4/64e8019f78bf459fa34dfb2612f53b82/artifacts/model/: MLmodel
homework/module_2/artifacts/4/78d5b5eadd894aa2a0eec6a97b81ea5e/artifacts/model/: MLmodel
homework/module_2/artifacts/4/7a4be0294dfe4b0e945683ca7a694e9e/artifacts/model/: MLmodel
homework/module_2/artifacts/4/811764b208db45ca880b2df7268f027e/artifacts/model/: MLmodel
homework/module_3/: README.md  prefect_deploy_homework.py
(+17 files in other folders)
