[tool.poetry]
name = "mlops-zoomcamp"
version = "0.1.0"
description = ""
authors = ["WassimAbida <wassim.abida@jellysmack.com>"]

[tool.poetry.dependencies]
python = "^3.9"
jupyter = "^1.0.0"
jupyterlab = "^3.4.2"
pandas = "^1.4.2"
pyarrow = "^8.0.0"
matplotlib = "^3.5.2"
seaborn = "^0.11.2"
scikit-learn = "1.1.0"
mlflow = "^1.26.0"
hyperopt = "^0.2.7"
xgboost = "^1.6.1"
fastparquet = "^0.8.1"
boto3 = "^1.23.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
